--- a/src/components/SizeInputContainer/styles.css
+++ b/src/components/SizeInputContainer/styles.css
@@ -1,9 +1,9 @@
-.sizeInput {
+.sizeInputContainer {
     display: inline-block;
     padding: 10px;
     text-transform: capitalize;
 }
-.sizeInput > input {
+.sizeInputContainer > input {
     display: block;
     margin-top: 5px;
 }
