--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -1,3 +1,12 @@
 .app {
   text-align: center;
 }
+
+.counters {
+  max-width: 400px;
+  margin: 20px auto;
+  text-align: left;
+}
+.counters > p {
+  margin: 5px 0;
+}
