patch: display number of dots

--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -7,6 +7,12 @@
   margin: 20px auto;
   text-align: left;
 }
+
 .counters > p {
   margin: 5px 0;
+}
+
+.counters b {
+  display: inline-block;
+  margin: 0 5px;
 }
